# AstraCore

./: .gitignore  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  purpose.md
.github/workflows/: ci.yml  release.yml
astracore-py/: Cargo.toml  pyproject.toml  setup.ps1  setup.sh
astracore-py/src/: lib.rs
benches/: gate_benchmark.rs
benches/criterion/: clifford_scale.rs  mps_scaling.rs  statevector_scaling.rs
benches/vs_qiskit/: compare.py
docs/: aql_spec.md  benchmark_report.md  conv.md  course_outline.md  how_to_use_astracore.md  plan_and_vision.md  plan_v2.md  plan_v3.md  plugin_marketplace.md  purpose.md  usage.md
examples/: bell.aql  clifford_1000q.aql  custom_gates.aql  deutsch.aql  ghz.aql  ghz_50q_mps.aql  grover.aql  ifmeasured.aql  named_registers.aql  rotations.aql  teleport.aql  toffoli.aql
examples/python/: README.md  backends_comparison.py  bell_state.py  custom_gates.py  dashboard_example.py  ghz_state.py  grovers.py  mps_large_circuit.py  run_qasm_example.py  shot_sampling.py  teleportation.py
playground/: README.md  docker-compose.yml  nginx.conf
src/: lib.rs  main.rs
src/compiler/: analysis.rs  error.rs  executor.rs  ir.rs  lexer.rs  mod.rs  parser.rs  qasm3_import.rs  qasm_export.rs  qasm_import.rs
src/core/: complex.rs  gates.rs  mod.rs  noise.rs  simd.rs  simulator.rs  state.rs
src/dashboard/: circuit_svg.rs  html.rs  mod.rs  server.rs  tui.rs
src/lsp/: completion.rs  debug_adapter.rs  diagnostics.rs  goto.rs  hover.rs  mod.rs  server.rs
src/optimizer/: mod.rs  peephole.rs
src/plugins/: backend.rs  gate.rs  integration.rs  mod.rs  optimizer.rs  registry.rs
src/runtime/: executor.rs  mod.rs  scheduler.rs  shots.rs
src/simulator/: clifford.rs  mod.rs  mps.rs  sparse.rs  svd.rs
src/simulator/gpu/: cuda_backend.rs  mod.rs  wgpu_backend.rs
tests/: test_astracore.py
vscode-astracore/: .vscodeignore  language-configuration.json  package-lock.json  package.json
vscode-astracore/media/: circuit.css  state.css
vscode-astracore/src/: circuitPanel.ts  extension.ts  statePanel.ts
vscode-astracore/syntaxes/: aql.tmLanguage.json
