[package]
name = "astracore"
version = "0.1.0"
edition = "2021"
description = "High-performance hybrid Classical-Quantum Runtime Engine"
license = "MIT OR Apache-2.0"
keywords = ["quantum", "simulation", "runtime", "simd", "quantum-computing"]

[[bin]]
name = "astracore"
path = "src/main.rs"

[lib]
name = "astracore"
path = "src/lib.rs"

[dependencies]
rand = "0.8"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "gate_benchmark"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
opt-level = 3
