[package]
name = "astracore-py"
version = "0.1.0"
edition = "2021"
description = "Python bindings for AstraCore quantum simulator"

[lib]
name = "astracore"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
astracore = { path = ".." }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
