[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "astracore"
version = "0.1.0"
description = "High-performance hybrid Classical-Quantum Runtime Engine — Python bindings"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Physics",
    "Intended Audience :: Science/Research",
]

[tool.maturin]
features = ["pyo3/extension-module"]
# Quick install (dev build):  pip install -e .
# Release build:               pip install -e . --config-settings="build-args=--release"
# Or use the bundled scripts:  bash setup.sh --release   /   .\setup.ps1 -Release

[project.optional-dependencies]
examples = ["numpy"]

[project.scripts]
# No CLI scripts — import as a library: import astracore as ac
